Fix event dispatching in tests

--- a/tests/_base/NodeList.html
+++ b/tests/_base/NodeList.html
@@ -525,21 +525,17 @@
 							nl[0].click();
 							doh.is(1, ctr);
 							var inButton = nl[0].appendChild(document.createElement("span"));
-							listen.dispatch(nl[0], {
-								type: "click"
+							listen.dispatch(nl[0], "click", {
 							});
-							listen.dispatch(inButton, {
-								type: "click",
+							listen.dispatch(inButton, "click", {
 								bubbles: true
 							});
-							listen.dispatch(inButton, {
-								type: "click",
+							listen.dispatch(inButton, "click", {
 								bubbles: false
 							});
 							doh.is(3, ctr);
 							handle.cancel();
-							listen.dispatch(nl[0], {
-								type: "click"
+							listen.dispatch(nl[0], "click", {
 							});
 							doh.is(3, ctr);
 						},
@@ -553,40 +549,33 @@
 								ctr++;
 							});
 							doh.is(0, ctr);
-							listen.dispatch(nl[0], {
-								type: "click"
+							listen.dispatch(nl[0], "click", {
 							});
-							listen.dispatch(bl[0], {
-								type: "click",
+							listen.dispatch(bl[0], "click", {
 								bubbles: true
 							});
 							doh.is(1, ctr);
 							handle.cancel();
-							listen.dispatch(bl[0], {
-								type: "click",
+							listen.dispatch(bl[0], "click", {
 								bubbles: true
 							});
 							doh.is(1, ctr);
 							dojo.query(tn).on(".thud:click, .thud button:custom", function(){
 								ctr++;
 							});
-							listen.dispatch(bl[0], {
-								type: "click",
+							listen.dispatch(bl[0], "click", {
 								bubbles: true
 							});
 							doh.is(2, ctr);
-							listen.dispatch(bl[0], {
-								type: "click",
+							listen.dispatch(bl[0], "click", {
 								bubbles: false
 							});
 							doh.is(2, ctr);
-							listen.dispatch(bl[0], {
-								type: "custom",
+							listen.dispatch(bl[0], "custom", {
 								bubbles: true
 							});
 							doh.is(3, ctr);
-							listen.dispatch(bl[0], {
-								type: "mouseout",
+							listen.dispatch(bl[0], "mouseout", {
 								bubbles: true
 							});
 							doh.is(3, ctr);
