--- a/tests/_base/NodeList.html
+++ b/tests/_base/NodeList.html
@@ -577,6 +577,8 @@
 								bubbles: true
 							});
 							doh.is(3, ctr);
+							bl[0].click();
+							doh.is(4, ctr);
 						},
 
 						function at(){
